<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.mainMenu.ListInfoFragment">

    <Button
        android:id="@+id/btn_info_rw09"
        style="@style/mButton"
        android:text="@string/info_rw_09"
        android:background="@drawable/bg_btn"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn_info_culinary"
        style="@style/mButton"
        android:text="@string/culinary_info"
        android:background="@drawable/bg_btn2"
        app:layout_constraintTop_toBottomOf="@id/btn_info_rw09"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_info_shop"
        style="@style/mButton"
        android:text="@string/shop_info"
        android:background="@drawable/bg_btn3"
        app:layout_constraintTop_toBottomOf="@id/btn_info_culinary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_info_rental"
        style="@style/mButton"
        android:background="@drawable/bg_btn4"
        android:text="@string/rental_info"
        app:layout_constraintTop_toBottomOf="@id/btn_info_shop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_info_service"
        style="@style/mButton"
        android:background="@color/colorPrimary"
        android:text="@string/service_info"
        app:layout_constraintTop_toBottomOf="@id/btn_info_rental"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>