<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.dkm.ListInfoDkmFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_info_dkm"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_collapseMode="pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Info DKM AL-Hikmah" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_info_dkm"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_dkm_kotakAmal"
                style="@style/mButton"
                android:text="@string/charity_box"
                android:background="@drawable/bg_btn"
                app:layout_constraintVertical_bias="0.2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <Button
                android:id="@+id/btn_dkm_infaq"
                style="@style/mButton"
                android:text="@string/donation"
                android:background="@drawable/bg_btn"
                app:layout_constraintTop_toBottomOf="@id/btn_dkm_kotakAmal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:id="@+id/btn_dkm_bangunganMasjid"
                style="@style/mButton"
                android:text="@string/donation_masjid"
                android:background="@drawable/bg_btn"
                app:layout_constraintTop_toBottomOf="@id/btn_dkm_infaq"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:id="@+id/btn_dkm_qurban"
                style="@style/mButton"
                android:background="@drawable/bg_btn"
                android:text="@string/qurban"
                app:layout_constraintTop_toBottomOf="@id/btn_dkm_bangunganMasjid"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:id="@+id/btn_dkm_listrik"
                style="@style/mButton"
                android:background="@drawable/bg_btn"
                android:text="@string/electricity_donation"
                app:layout_constraintTop_toBottomOf="@id/btn_dkm_qurban"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>